[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/ArialCE.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://RegisterPage/NextButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://RegisterPage/GoBack_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://RegisterPage/RegisterPage.gd" type="Script" id=5]
[ext_resource path="res://assets/theme/BackgroundTexture.tres" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[node name="RegisterPage" type="Control"]
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="NinePatchRect" parent="."]
margin_left = -3.0
margin_top = -5.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 640, 360 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 307.0
margin_top = 130.0
margin_right = -323.0
margin_bottom = -44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="background/VBoxContainer"]
margin_left = 149.0
margin_right = 248.0
margin_bottom = 14.0
size_flags_horizontal = 4
size_flags_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Register Screen"
align = 1
valign = 1

[node name="UsernameTitle" type="Label" parent="background/VBoxContainer"]
margin_top = 125.0
margin_right = 397.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Username"

[node name="Username" type="LineEdit" parent="background/VBoxContainer"]
margin_top = 143.0
margin_right = 397.0
margin_bottom = 167.0

[node name="PasswordTitle" type="Label" parent="background/VBoxContainer"]
margin_top = 171.0
margin_right = 397.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Password"

[node name="Password" type="LineEdit" parent="background/VBoxContainer"]
margin_top = 189.0
margin_right = 397.0
margin_bottom = 213.0

[node name="ConfirmPasswordTitle" type="Label" parent="background/VBoxContainer"]
margin_top = 217.0
margin_right = 397.0
margin_bottom = 231.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Confirm Password"

[node name="ConfirmPassword" type="LineEdit" parent="background/VBoxContainer"]
margin_top = 235.0
margin_right = 397.0
margin_bottom = 259.0

[node name="EmailTitle" type="Label" parent="background/VBoxContainer"]
margin_top = 263.0
margin_right = 397.0
margin_bottom = 277.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Email"

[node name="Email" type="LineEdit" parent="background/VBoxContainer"]
margin_top = 281.0
margin_right = 397.0
margin_bottom = 305.0

[node name="NextButton" parent="background/VBoxContainer" instance=ExtResource( 2 )]
margin_left = 118.0
margin_top = 371.0
margin_right = 278.0
margin_bottom = 431.0
rect_min_size = Vector2( 160, 60 )
size_flags_horizontal = 4
size_flags_vertical = 10
script = null

[node name="Label" type="Label" parent="background/VBoxContainer/NextButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameError" type="Popup" parent="background"]
margin_left = 707.118
margin_top = 255.969
margin_right = 951.118
margin_bottom = 297.969
rect_scale = Vector2( 0.628959, 0.764356 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/UsernameError"]
margin_left = 7.0
margin_top = 8.92322
margin_right = 118.0
margin_bottom = 22.9232
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInvalidError" type="Popup" parent="background"]
margin_left = 434.879
margin_top = 168.662
margin_right = 678.879
margin_bottom = 210.662
rect_scale = Vector2( 0.628959, 0.764356 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PasswordInvalidError"]
margin_left = 436.551
margin_top = 190.07
margin_right = 708.551
margin_bottom = 238.07
rect_pivot_offset = Vector2( -789.923, -102.139 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Password must be at least 10 characters,
containing at least 1 uppercase, 
1 lowercase and 1 special character."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordMatchError" type="Popup" parent="background"]
margin_left = 707.118
margin_top = 380.58
margin_right = 951.118
margin_bottom = 422.58
rect_scale = Vector2( 0.628959, 0.764356 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/PasswordMatchError"]
margin_left = 8.2619
margin_top = 15.4607
margin_right = 194.262
margin_bottom = 34.4607
rect_pivot_offset = Vector2( -789.923, -102.139 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Passwords do not match"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInvalidError" type="Popup" parent="background"]
margin_left = 711.086
margin_top = 456.776
margin_right = 955.086
margin_bottom = 498.776
rect_scale = Vector2( 0.628959, 0.764356 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="background/EmailInvalidError"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.07675
margin_bottom = -2.07675
rect_pivot_offset = Vector2( -789.923, -102.139 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Invalid email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlreadyRegistered" type="Popup" parent="background"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="background/AlreadyRegistered"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 600.869
margin_top = 521.119
margin_right = 881.869
margin_bottom = 540.119
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.0352941, 0.0352941, 1 )
text = "Email is already registered"
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="backButton" parent="." instance=ExtResource( 3 )]
margin_left = 32.0
margin_top = 24.0
margin_right = 196.0
margin_bottom = 80.0

[node name="HTTPRequestRegister" type="HTTPRequest" parent="."]

[node name="HTTPAllUser" type="HTTPRequest" parent="."]
[connection signal="text_changed" from="background/VBoxContainer/Password" to="." method="_on_Password_text_changed"]
[connection signal="text_changed" from="background/VBoxContainer/ConfirmPassword" to="." method="_on_ConfirmPassword_text_changed"]
[connection signal="pressed" from="background/VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="request_completed" from="HTTPRequestRegister" to="." method="_on_register_request_completed"]
[connection signal="request_completed" from="HTTPAllUser" to="." method="_on_HTTPAllUser_request_completed"]
